# mask-orchestrator

./: .env.example  .gitignore  README.md  pyproject.toml
config/prompts/: system.md
docs/: BUILD_GUIDE.md
scripts/: debug_streaming.py  debug_streaming_detailed.py
src/mask_orchestrator/: __init__.py  agent.py  main.py  openai_adapter.py  streaming.py
src/mask_orchestrator/tools/: __init__.py  orchestration.py
tests/: test_orchestration.py
